--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
             </ul>
             <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Mais Vaidosa</b></h1>
-        
-        </div> 
-        <!-- ???????? -->
+        </div>
+        <div>
+            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"</a>
+             <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"></a>
+             <a he
+        </div>
+        <div
+
+        <a href="""">
         <div class="container">
             <a href="#"> <img src="img/Favoritos.svg" alt=""></a>
         </div>
