--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
-                <li class="lista-menu__item">
+                </label
+        
+                li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">maquiagens Glam</a>
                 </li>
                 <li class="lista-menu__item">
@@ -33,7 +35,7 @@
             <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"</a>
              <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"></a>
              <a he
-        </div>
+        div
         <div
 
         <a href="""">
