--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
                     <a href="#" class="lista-menu__link">maquiagens Soft</a>
                 </li>
             </ul>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-            <h1 class="container__titulo"><b class="container__titulo--negrito">Mais Vaidosa</b></h1>
-        </div>
-        <div>
-            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"</a>
+            <img class = 'container__imagem' src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+            <h1 class="container__titulo">???<b class="container__titulo--negrito">Mais Vaidosa</b></h1
+            </div
+            <ul class="opcoes">
+                <input type="checkbox" id=" opcoes-menu" class=" opcoes__botao">
+                <label for="opcoes-menu">
+                        <li class=" opcoes__item">Categorias</li>
+                </label>
+            </ul>
+
+
+            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem" ><a/>
              <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"></a>
              <a he
         div
-        <div
-
-        <a href="""">
-        <div class="container">
-            <a href="#"> <img src="img/Favoritos.svg" alt=""></a>
+        <a href="">
+        <div class="container"
         </div>
     </header>
     
