--- a/index.html
+++ b/index.html
@@ -16,35 +16,26 @@
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
-                </label
-        
-                li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">maquiagens Glam</a>
+                <li class="lista-menu__item">
+                    <a href="https://blog.ikesaki.com.br/maquiagem-glam-conheca-o-passo-a-passo-para-essa-make-incrivel/" class="lista-menu__link">maquiagens Glam</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">maquiagens Glow</a>
+                    <a href="https://carenb.com/blogs/beauty-journal/o-que-e-maquiagem-glow-6-dicas-de-como-fazer-a-sua" class="lista-menu__link">maquiagens Glow</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista-menu__link">maquiagens Soft</a>
+                    <a href="https://blog.oceane.com.br/maquiagem/soft-girl-maquiagem/" class="lista-menu__link">maquiagens Soft</a>
                 </li>
             </ul>
-            <img class = 'container__imagem' src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
-            <h1 class="container__titulo">???<b class="container__titulo--negrito">Mais Vaidosa</b></h1
-            </div
-            <ul class="opcoes">
-                <input type="checkbox" id=" opcoes-menu" class=" opcoes__botao">
-                <label for="opcoes-menu">
-                        <li class=" opcoes__item">Categorias</li>
-                </label>
-            </ul>
-
-
-            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem" ><a/>
-             <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"></a>
-             <a he
-        div
-        <a href="">
-        <div class="container"
+            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Mais Vaidosa</b></h1>
+        </div>
+        <ul class="opcoes">
+            <input class="checkbox" id="opcoes-menu" class="opcoes__botoes"
+        </ul>
+        <div class="container">
+            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"></a>
+            <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"
+            <a href="#"> <img src="img/Usuario.svg" alt="" class="container__imagem"></a>
         </div>
     </header>
     
