--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
             <h1 class="container__titulo"><b class="container__titulo--negrito">Mais Vaidosa</b></h1>
         </div>
         <ul class="opcoes">
-            <input class="checkbox" id="opcoes-menu" class="opcoes__botoes"
+            <input class="checkbox" id="opcoes-menu" class="opcoes__botoes">
         </ul>
-        <div class="container">
-            <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"></a>
-            <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"
-            <a href="#"> <img src="img/Usuario.svg" alt="" class="container__imagem"></a>
-        </div>
+        <div class="container" > 
+        <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"></a>
+        <a href="#"> <img src="img/Favoritos.svg" alt="" class="container__imagem"></a>
+        <a href="#"> <img src="img/Usuario.svg" alt="" class="container__imagem"></a>
+    </div>
     </header>
+    <img class="imagem1" src="img/download (1).jpeg">
+    <img class="imagem2" src="img/download (2).jpeg">
+    <img class="imagem3" src="img/download.jpeg">
     
 </body>
 </html>
