--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
     <title>Mais Vaidosa</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+    
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Mais Vaidosa</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">maquiagens Glam</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Maquiagens Glow</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Maquiagens Soft</a>
+              </li>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
      <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
@@ -31,6 +56,10 @@
         </div>
         <ul class="opcoes">
             <input class="checkbox" id="opcoes-menu" class="opcoes__botoes">
+            <label for="opcoes-menu">
+            <li class="opcoes_-item">Categorias</li>
+            </label>
+            
         </ul>
         <div class="container" > 
         <a href="#"> <img src="img/Compras.svg" alt="" class="container__imagem"></a>
