--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
+          <img src="img/Logo.sva Alurabooks" alt="Logo da Alurabooks" class="container__imagem">
           <a class="navbar-brand" href="#">Mais Vaidosa</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">maquiagens Glam</a>
+                <a class="nav-link active" aria-current="page" href="#">Maquiagens Glam</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Maquiagens Glow</a>
@@ -39,19 +40,7 @@
             <label for="menu">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
             </label>
-            <ul class="lista-menu">
-                <li class="lista-menu__titulo">Categorias</li>
-                <li class="lista-menu__item">
-                    <a href="https://blog.ikesaki.com.br/maquiagem-glam-conheca-o-passo-a-passo-para-essa-make-incrivel/" class="lista-menu__link">maquiagens Glam</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://carenb.com/blogs/beauty-journal/o-que-e-maquiagem-glow-6-dicas-de-como-fazer-a-sua" class="lista-menu__link">maquiagens Glow</a>
-                </li>
-                <li class="lista-menu__item">
-                    <a href="https://blog.oceane.com.br/maquiagem/soft-girl-maquiagem/" class="lista-menu__link">maquiagens Soft</a>
-                </li>
-            </ul>
-            <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      
             <h1 class="container__titulo"><b class="container__titulo--negrito">Mais Vaidosa</b></h1>
         </div>
         <ul class="opcoes">
@@ -70,6 +59,8 @@
     <img class="imagem1" src="img/download (1).jpeg">
     <img class="imagem2" src="img/download (2).jpeg">
     <img class="imagem3" src="img/download.jpeg">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     
 </body>
 </html>
